About page alignment fix (#58)

--- a/_sass/_articles.scss
+++ b/_sass/_articles.scss
@@ -46,8 +46,8 @@
         display: block;
         max-width: 100%;
         height: auto;
-        margin-top: 1rem !important;
-        margin-bottom: 2rem !important;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
     }
 
     .video {
